[package]
name = "easy-opengl"
version = "0.1.2"
edition = "2021"
description = "A set of tools to make easy opengl without lossing custumization and freedom"
author = "Sebastian Gonzalez <devsebasgr@gmail.com>"
readme = "README.md"
categories = ["opengl"]
keywords = ["opengl", "tools", "easy"]
repository = "https://github.com/Stolkerve/easy-opengl"
license = "MIT OR Apache-2.0"

[dependencies]
gl = "0.14.0"
stb_image = "0.2.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
